--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Dash Nuke",
+  "name": "DashBlocker",
   "version": "0.1.0",
   "description": "Hides X posts containing em dashes.",
   "action": {
