--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,12 @@
   "permissions": ["storage"],
   "content_scripts": [
     {
-      "matches": ["*://*.x.com/*"],
+      "matches": [
+        "*://*.x.com/*",
+        "https://x.com/*",
+        "https://twitter.com/*",
+        "https://*.twitter.com/*"
+      ],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
