--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "DashBlocker",
   "version": "1.0.0",
-  "description": "Hides X posts containing em dashes.",
+  "description": "Fight AI-generated spam: Instantly filter out tweets with em-dashes from your timeline.",
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
