Rename extension from DashBlocker to DeadDash across all files

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "DashBlocker",
+  "name": "DeadDash",
   "version": "1.0.0",
   "description": "Fight AI-generated spam: Instantly filter out tweets with em-dashes from your timeline.",
   "action": {
